# idk

./: .gitignore  BENCH_RUNBOOK.md  DISAGG_RUNBOOK.md  bench_commands.txt  benchmarks.csv  benchmarks.html  pyproject.toml  run_bench.py  valid_nodes.txt  viz.ipynb
results/: decode_epX_in1024_out64_1.json  decode_epX_in1024_out64_4.json  decode_in1024_out1024_1024.json  decode_in1024_out1024_2048.json  decode_in1024_out1024_4096.json  decode_in1024_out1024_64.json  dist_in1024_out1024_per_node_4096.json  ep8_rps16_in1024_out1024_1024.json  ep8_rps16_in1024_out1024_128.json  ep8_rps16_in1024_out1024_2048.json  ep8_rps16_in1024_out1024_256.json  ep8_rps16_in1024_out1024_4096.json  ep8_rps16_in1024_out1024_512.json  ep8_rps16_in1024_out1024_64.json  hybrid_in10_out1024_node1_1024.json  hybrid_in10_out1024_node2_1024.json  hybrid_in10_out1024_node3_1024.json  hybrid_sanity_node1_8.json  hybrid_sanity_node2_8.json  hybrid_sanity_node3_8.json  tp4_rps16_in1024_out1024_1024.json  tp4_rps16_in1024_out1024_128.json  tp4_rps16_in1024_out1024_2048.json  tp4_rps16_in1024_out1024_256.json  tp4_rps16_in1024_out1024_4096.json  tp4_rps16_in1024_out1024_512.json  tp4_rps16_in1024_out1024_64.json
results_guidellm/: dbo.csv  no_dbo.csv  out.csv
scripts/: bench.py  bench_distributed.py  chat.py  diag_bench.py  disagg_proxy.py  install_disagg_deps.sh  launch_bench.sh  launch_bench_hybrid.sh  launch_disagg.sh  test_nixl_ucm.py
test_results/: openai-infqps-concurrency1024-GLM-5-FP8-20260303-005048.json  openai-infqps-concurrency256-GLM-5-FP8-20260303-004855.json  (+4 more)
(+3 files in other folders)
