[project]
name = "vllm-benchmarking"
version = "0.1.0"
description = "Benchmark vllm across various configurations for INTELLECT-3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm >= 0.16.0",
    "pandas",
    "aiohttp",
    "matplotlib>=3.10.8",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "deep-gemm @ file:///home/matej/dev/vllm-benchmarking/wheels/deep_gemm-2.3.0-cp312-cp312-linux_x86_64.whl",
    "deep-ep @ file:///home/matej/dev/vllm-benchmarking/wheels/deep_ep-1.2.1+73b6ea4-cp312-cp312-linux_x86_64.whl",
    "pplx-kernels @ file:///home/matej/dev/vllm-benchmarking/wheels/pplx_kernels-0.0.1-cp39-abi3-linux_x86_64.whl",
]
